# smart-elevator-app

./: README.md
elevator-backend/: pyproject.toml  test.py
elevator-backend/backend/helpers/: methods.py
elevator-backend/backend/routes/: elevator_routes.py
elevator-frontend/: package-lock.json
elevator-frontend/src/: App.js  index.css
elevator-frontend/src/components/: ElevatorLocations.jsx  RequestQueue.jsx
elevator_backend/: .gitignore  README.md  main.py  pyproject.toml
elevator_backend/backend/helpers/: classes.py  methods.py
elevator_backend/backend/models/: elevators_models.py
elevator_backend/backend/routes/: elevator_routes.py
elevator_backend/tests/: test_classes.py  test_elevator_routes.py
elevator_frontend/: .gitignore  package.json
elevator_frontend/src/components/: ElevatorConfiguration.jsx  ElevatorControlPanel.jsx
